testsuite/tests/rename/should_fail/T25901_exp_fail_2.hs
{-# LANGUAGE ExplicitNamespaces #-}

module T25901_exp_fail_2 where

import T25901_exp_fail_2_helper (data m, data E, data f, data f2,
                                 data D, data D2, data v, data K, data K1)
